# Concevez_et_deployez_un_systeme_RAG

./: .gitignore  .txt  Dockerfile  Dockerfile.txt  README.md  Untitled-1 - Copie.ipynb  Untitled-1-checkpoint.ipynb  Untitled-1.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflow/: python-ci-cd.yml
.github/workflows/: python-ci-cd.yml
notebooks/: indexation_faiss.ipynb
scripts/: 010_generate_embeddings.py  011_resume_generate_embeddings.py  040_rag_fast_api.py  app_config.py  config.py  data_collected.py  generate_embeddings (2).py  generate_embeddings.py  index_faiss_metadatas.py  rag_fast_api.py  rag_langchain_faiss.py  resume_generate_embeddings.py
scripts/data/processed/faiss_indexes/: index_descriptions_metadata.pkl
scripts/data/processed/faiss_indexes/index_descriptions/: index.faiss  index.pkl
scripts/data/processed/faiss_indexes/index_descriptions_longues/: index.faiss  index.pkl
scripts/data/processed/faiss_indexes/save/: index_descriptions_metadata.pkl
scripts/data/raw/: events_20251031_1155.json
tests/: test_api.py  test_api_endpoints.py  test_imports.py
